# oxen-mq

./: .drone.jsonnet  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  liblokimq.pc.in  liboxenmq.pc.in
SPECS/: oxenmq.spec
cmake/: libatomic.cmake
cmake/local-libzmq/: FindZeroMQ.cmake  LocalLibzmq.cmake  README.txt
debian/: changelog  control  control.in  copyright  gbp.conf  gen-liblokimq-install.sh  gen-liboxenmq-install.sh  liblokimq-dev.install  liblokimq.install.in  liboxenmq-dev.install  liboxenmq.install.in  rules  update-lib-version.sh
debian/patches/: 0001-slower-connection-tests.patch  0002-Fix-pre-1.1.0-UNKNOWNCOMMAND-detection.patch  0002-Fully-version-library.patch  0002-Ubuntu-cmake-hack.patch  0002-cmake-work-around-for-cmake-3.21.patch  0002-epoll-always-retrieve-events-from-triggered-sockets.patch  series
doc/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  index.rst  readme.rst.in
lokimq/: address.cpp  address.h  auth.cpp  auth.h  base32z.h  base64.h  batch.cpp  batch.h  bt_serialize.cpp  bt_serialize.h  bt_value.h  byte_type.h  connections.cpp  connections.h  hex.h  jobs.cpp  lokimq-internal.h  lokimq.cpp  lokimq.h  message.h  proxy.cpp  string_view.h  variant.h  version.h  version.h.in  worker.cpp
oxenmq/: address.cpp  address.h  auth.cpp  auth.h  base32z.h  base64.h  batch.h  bt_producer.h  bt_serialize.cpp  bt_serialize.h  bt_value.h  byte_type.h  connections.cpp  connections.h  fmt.h  hex.h  jobs.cpp  message.h  oxenmq-internal.h  oxenmq.cpp  oxenmq.h  proxy.cpp  pubsub.h  string_view.h  variant.h  version.h.in  worker.cpp
pybind/: CMakeLists.txt  bencode.cpp  common.hpp  lokimq.cpp  module.cpp
pyoxenmq/: CMakeLists.txt  bencode.cpp  common.hpp  module.cpp  oxenmq.cpp
tests/: CMakeLists.txt  common.h  main.cpp  test_address.cpp  test_batch.cpp  test_bencode.cpp  test_bt.cpp  test_commands.cpp  test_connect.cpp  test_encoding.cpp  test_failures.cpp  test_inject.cpp  test_pubsub.cpp  test_requests.cpp  test_socket_limit.cpp  test_string_view.cpp  test_tagged_threads.cpp  test_timer.cpp
